# camera_streamer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
build-imx6ull/: CMakeCache.txt  Makefile  camera_streamer  cmake_install.cmake
capture/: frame.hpp  v4l2_device.cpp  v4l2_device.hpp
cmake/toolchains/: imx6ull-armhf.cmake
common/: bounded_queue.hpp  logger.hpp  time_utils.hpp
config/: streamer.yaml
encode/: encoded_packet.hpp  encoder.hpp  mjpeg_encoder_stub.cpp
pipeline/: capture_worker.cpp  capture_worker.hpp  encode_worker.cpp  encode_worker.hpp  metrics.hpp  pipeline_config.hpp  publish_worker.cpp  publish_worker.hpp  stats_worker.cpp  stats_worker.hpp
publish/: rtsp_publisher.hpp  rtsp_publisher_stub.cpp
scripts/: build-imx6ull.sh
